# session-export

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements-mcp.txt  requirements.txt
.github/workflows/: docs.yml  publish.yml
docs/: architecture.md  cli.md  converters.md  data-fidelity.md  index.md  installation.md  mcp-server.md  models.md  paths.md  quickstart.md  search.md  stores.md  traces.md
examples/: bulk_export.py  convert_single.py  custom_paths.py  fork_session.py  list_sessions.py  mcp_client.py  search_sessions.py
session_sdk/: __init__.py  converters.py  json_types.py  jsonl.py  models.py  paths.py  search.py  stores.py  traces.py  windsurf_pb.py
tests/: test_conversion.py
unisessions/: __init__.py  __main__.py  cli.py  mcp_server.py
